# tail-glow

./: .env.example  IMPLEMENTATION_SPEC.md  LICENSE  PLAN.md  POKEMON_TEMPLATE.md  README.md  pyproject.toml
data/chroma/: chroma.sqlite3
infra/: docker-compose.yml
local-showdown-server/: Dockerfile  docker-compose.yml
scripts/: generate_effects.py  local_battle.py
src/: config.py  main.py
src/agent/: __init__.py  graph.py  prompts.py  state.py
src/agent/nodes/: __init__.py  battle_memory.py  best_moves.py  best_switches.py  compile.py  create_strategy.py  damage.py  decide.py  effects.py  expected_move.py  fetch_sets.py  format_state.py  matchup_calculator.py  parse.py  speed.py  strategy_rag.py  team_analysis.py  teams.py  tera.py  type_matchups.py
src/agent/prompts/: __init__.py  battle_memory.py  compile.py  create_strategy.py  decision.py  expected_move.py  team_analysis.py
src/battle/: __init__.py  teams_state.py
src/damage_calc/: __init__.py  calculator.py
src/data/: __init__.py  effects.py  randbats.py
src/llm/: __init__.py  provider.py
src/rag/: __init__.py  retriever.py  store.py
src/showdown/: __init__.py  client.py  formatter.py
src/speed/: __init__.py  calculator.py
tests/: __init__.py  conftest.py  test_formatter.py
